# FLWR

./: ADVANCED_CLASS_IMBALANCE_SOLUTIONS.md  IMPLEMENTATION_SUMMARY.md  README.md  best_binary_model_0.pth  best_binary_model_1.pth  best_binary_model_2.pth  best_binary_model_7.pth  best_binary_model_8.pth  pyproject.toml  results_batch_size32.txt  sequences_meta.json
DL/: dits-ToN-IoT-nf.py  dits-ToN-IoT.py  dits-cic-ids2017.py  feature-reduction-toniot-nf.py  feature-reduction-toniot.py  freature-reduction-cic-ids2017.py  results.txt  ton_iot_pre-proc.py
FL/: dits-cicids2017.py  dits-toniot-nf.py  dits-toniot.py  requirements.txt
FL/fedavgids/: README.md  binary _CNN_LSTM_ToN_ToT.json  binary_server_metrics_cnn_bilstm_fedavg.json  pyproject.toml  server_metrics.json
FL/fedproxids/: README.md  pyproject.toml
FL/signsgdids/: README.md  pyproject.toml
IDS-FL-CSE400-HR/: ANALYSIS_AND_FIXES.md  ENHANCED_OPTIMIZATION_PLAN.md  best_binary_model_3.pth  best_binary_model_4.pth  best_binary_model_5.pth  best_binary_model_6.pth  best_binary_model_9.pth  pyproject.toml  results_batch_size256.txt
IDS-FL-CSE400-HR/pytorchexample/: client_app.py  server_app.py
IDS-FL-CSE400-Simulated-Annealing/Metrics/: 4.json  6.json  8.json
Ids_dataset/: UNSW_NB15_binary_test.parquet
Metrics/: 0.json  1.json  2.json  3.json  5.json
pytorchexample/: client_app.py  helper.py  task.py  utility.py
zero-trust-fed-cnn-bilstm-app/: README.md  pyproject.toml
zero-trust-fed-cnn-bilstm-app/zero_trust_fed_cnn_bilstm_app/: __init__.py  client_app.py  server_app.py  task.py
(+24 files in other folders)
