[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zero-trust-fed-cnn-bilstm-app"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "pandas",
    "scikit-learn",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "ids-cse400"

[tool.flwr.app.components]
serverapp = "zero_trust_fed_cnn_bilstm_app.server_app:app"
clientapp = "zero_trust_fed_cnn_bilstm_app.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 2
fraction-fit = 0.5
local-epochs = 3

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
